fix: add status on tasks and put  example on swagger
